--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,11 @@ dependencies {
     implementation 'com.airbnb.android:lottie:5.0.3'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    //camera
+    implementation "androidx.camera:camera-camera2:1.2.0-alpha01"
+    implementation "androidx.camera:camera-lifecycle:1.2.0-alpha01"
+    implementation "androidx.camera:camera-view:1.2.0-alpha01"
+
     //hilt
     implementation "com.google.dagger:hilt-android:2.41"
     kapt "com.google.dagger:hilt-compiler:2.41"
